@@ -18,6 +18,7 @@ WinMerge 2.9.1.6
   Confirmation dialog for move operations (#2026508)
   Unlimited undo (#2033754)
   Add wait cursor for undo and redo (#2039228)
+  Rename color scheme menu item "None" and add separator (#2027300)
   BugFix: Use system codepage for paths (#1979429, #2008581)
   BugFix: ANSI build crash in folder compare (#2010053)
   BugFix: Add insert/overtype mode indicator to statusbar (#2015174)
